--- a/restaurante/css/styles.css
+++ b/restaurante/css/styles.css
@@ -1,4 +1,65 @@
-div {
-    border: solid 1px red;
+@import url('https://fonts.googleapis.com/css?family=Cabin');
+
+* {
+    /* box-sizing: border-box; */
+    /* border: solid 1px red; */
+    font-family: 'Cabin', sans-serif;
 }
 
+#wrapper {
+    width: 90%;
+    margin: auto;
+}
+#header {
+    /* background-color: pink; */
+    height: 90px;
+}
+#logo {
+    /* background-color: blue; */
+    width: 20%;
+    float: left;
+}
+#nav {
+    /* background-color: red; */
+    width: 80%;
+    float: left;
+}
+
+#nav ul {
+    list-style-type: none;
+    float: right;
+}
+
+#nav li{
+    float: left;
+}
+
+#nav a {
+    /* background-color: yellow; */
+    display: block;
+    min-width: 80px;
+    text-decoration: none;
+    padding: 10px;
+}
+
+#nav a:hover {
+    text-decoration: underline;
+}
+
+#slide {
+    background-image: url(../img/slide1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 300px;
+    color: #533930;
+}
+
+.textBox {
+    width: 40%;
+    float: right;
+    background-color: rgba(255,255,255,0.6);
+    padding: 20px;
+    margin-top: 30px;
+    margin-right: 30px;
+}
